--- a/views/listing/singlelist.ejs
+++ b/views/listing/singlelist.ejs
@@ -81,10 +81,11 @@
         Rated: <%= review.rating %>
       </p>
 
+      <% if(currUser && currUser._id.equals(review.author._id)) {  %>
       <form class="mb-3" method="POST" action="/listings/<%=list._id %>/reviews/<%=review._id %>?_method=DELETE">
         <button class="btn btn-sm bg-dark">Delete</button>
       </form>
-   
+      <% }%>
    
     </div>
   </div>
